--- a/benchmarks/HRNet-Semantic-Segmentation-HRNet-OCR/experiments/rellis/seg_hrnet_ocr_w48_train_512x1024_sgd_lr1e-3_wd5e-4_bs_12_epoch484.yaml
+++ b/benchmarks/HRNet-Semantic-Segmentation-HRNet-OCR/experiments/rellis/seg_hrnet_ocr_w48_train_512x1024_sgd_lr1e-3_wd5e-4_bs_12_epoch484.yaml
@@ -2,22 +2,22 @@ CUDNN:
   BENCHMARK: true
   DETERMINISTIC: false
   ENABLED: true
-GPUS: (0,1)
-OUTPUT_DIR: 'output'
+GPUS: (0,0)
+OUTPUT_DIR:  '/home/jordan/development/RELLIS-3D/benchmarks/prediction'
 LOG_DIR: 'log'
-WORKERS: 4
+WORKERS: 8
 PRINT_FREQ: 10
 
 DATASET:
   DATASET: rellis
-  ROOT: /home/usl/Datasets/rellis/
-  TEST_SET: 'val.lst'
+  ROOT: /home/jordan/development/RELLIS-3D/
+  TEST_SET: 'test.lst'
   TRAIN_SET: 'train.lst'
   NUM_CLASSES: 19
 MODEL:
   NAME: seg_hrnet_ocr
   NUM_OUTPUTS: 2
-  PRETRAINED: "/path/to/HRNet-Semantic-Segmentation-HRNet-OCR/pretrained_models/hrnetv2_w48_imagenet_pretrained.pth"
+  PRETRAINED: "/home/jordan/development/RELLIS-3D/benchmarks/HRNet-Semantic-Segmentation-HRNet-OCR/pretrained_models/hrnetv2_w48_imagenet_pretrained.pth"
   EXTRA:
     FINAL_CONV_KERNEL: 1
     STAGE1:
@@ -95,9 +95,12 @@ TRAIN:
   SCALE_FACTOR: 16
 TEST:
   IMAGE_SIZE:
-  - 1920
-  - 1200
+  - 1024
+  - 512
+  # - 1920
+  # - 1200
   BASE_SIZE: 1920
   BATCH_SIZE_PER_GPU: 4
   FLIP_TEST: false
   MULTI_SCALE: false
+  MODEL_FILE: "/home/jordan/development/RELLIS-3D/benchmarks/HRNet-Semantic-Segmentation-HRNet-OCR/output/rellis/seg_hrnet_ocr_w48_train_512x1024_sgd_lr1e-2_wd5e-4_bs_12_epoch484/best.pth"
